# aligo-travel-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TECHNICAL_REPORT.md  benchmark.py  cli.py  config.py  docker-compose.yml  docker-entrypoint.sh  proj_question.md  pyproject.toml  requirements-dev.txt  requirements.txt  计划.md
.claude/skills/: README.md
.github/workflows/: ci.yml
agents/: __init__.py  event_collection_agent.py  intention_agent.py  memory_query_agent.py  orchestration_agent.py  preference_agent.py  rag_knowledge_agent.py
context/: __init__.py  long_term_memory.py  memory_manager.py  postgres_storage.py  redis_cache.py  short_term_memory.py
docs/: TECHNICAL_REPORT.md  proj_question.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
scripts/: github_auto_push.cron.example  github_auto_push.sh  init_postgres_schema.py  migrate_json_to_postgres.py
tests/: benchmark.py  conftest.py  test_cli_qa.py  test_event_collection_agent.py  test_information_query_agent.py  test_intention_agent.py  test_intention_agent_utils.py  test_memory_system.py  test_new_agents_utils.py  test_orchestration.py  test_orchestration_utils.py  test_postgres_memory_manager.py  test_postgres_migration_utils.py  test_rag_agent.py  test_redis_cache.py  test_security_hardening.py  test_web_api_routes.py  test_web_auth.py
tests/fixtures/: rag_qa_golden.json
travel_agent/: __init__.py  cli.py  config.py  config_agentscope.py  observability.py  web_api.py  web_auth.py
travel_agent/agents/: __init__.py  event_collection_agent.py  information_query_agent.py  intention_agent.py  itinerary_planning_agent.py  lazy_agent_registry.py  memory_query_agent.py  orchestration_agent.py  protocol.py  rag_knowledge_agent.py
travel_agent/context/: __init__.py  long_term_memory.py  memory_manager.py  memory_updater.py  postgres_storage.py
travel_agent/llm/: __init__.py  sdk.py
travel_agent/scripts/: __init__.py  evaluate_rag_qa.py  init_knowledge_base.py  init_postgres_schema.py  migrate_json_to_postgres.py  (+1 more)
(+16 files in other folders)
