[project]
name = "TravelAgent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "agentscope==1.0.16",
    "ddgs==9.10.0",
    "pymilvus[milvus-lite]==2.6.9",
    "requests==2.32.3",
    "rich==13.9.4",
    "pyyaml>=6.0.0",
    "sentence-transformers==5.2.3",
    "setuptools>=69.0.0,<82",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.3",
    "PyJWT>=2.9.0",
    "slowapi>=0.1.9",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.uv.index]]
name = "tuna"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
